--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'jakarta.validation:jakarta.validation-api'
+    implementation 'com.github.munerf.modelmapper-spring-boot-starter:modelmapper-spring-boot-starter:0.0.1'
+    implementation "com.googlecode.json-simple:json-simple:1.1.1"
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+
+    // com.sun.xml.bind
+    implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
+    implementation 'com.sun.xml.bind:jaxb-core:4.0.1'
+    // javax.xml.bind
+    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+
+    runtimeOnly 'mysql:mysql-connector-java'
+    implementation "io.jsonwebtoken:jjwt:0.9.1"
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    testImplementation 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
